@@ -1,3 +1,4 @@
+	* fixed deadlock when starting torrents with certain invalid tracker URLs
 	* fixed iterator bug in disk I/O thread
 	* fixed FIEMAP support on linux
 	* fixed strict aliasing warning on gcc
